crates/pcb-zen/tests/snapshots/module_loading__module_nonexistent_file.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: snapshot_output
---
Error: File not found: [TEMP_DIR]does_not_exist.zen
   ╭─[ [TEMP_DIR]test.zen:3:17 ]
   │
 3 │ MissingModule = Module("does_not_exist.zen")
   │                 ──────────────┬─────────────  
   │                               ╰─────────────── File not found: [TEMP_DIR]does_not_exist.zen
───╯
